// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Menu has back button when in submenu 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <ul
      class="MuiList-root PicassoMenuList-root PicassoMenu-hideMenu"
      role="menu"
      tabindex="-1"
    >
      <li
        aria-disabled="false"
        class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root PicassoMenuListItem-root PicassoMenuListItem-light MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
        role="menuitem"
        tabindex="0"
      >
        <div
          class="PicassoContainer-flex PicassoContainer-column PicassoMenuListItem-content"
        >
          <div
            class="PicassoContainer-centerAlignItems PicassoContainer-flex"
          >
            <span
              class="PicassoMenuListItem-stringContent"
            >
              Item 1
            </span>
            <div
              class="PicassoContainer-leftxsmallMargin PicassoContainer-flex PicassoContainer-inline"
            >
              <svg
                class="PicassoSvgChevronMinor16-root"
                style="min-width: 16px; min-height: 16px;"
                viewBox="0 0 16 16"
              >
                <path
                  d="M5.997 3.29l4 4 .707.707-.707.707-4 4-.707-.707 4-4-4-4 .707-.707z"
                />
              </svg>
            </div>
          </div>
        </div>
      </li>
    </ul>
    <ul
      class="MuiList-root PicassoMenuList-root"
      role="menu"
      tabindex="-1"
    >
      <li
        aria-disabled="false"
        class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root PicassoMenuListItem-root PicassoMenuListItem-light MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
        role="menuitem"
        tabindex="0"
      >
        <div
          class="PicassoContainer-flex PicassoContainer-column PicassoMenuListItem-content"
        >
          <div
            class="PicassoContainer-centerAlignItems PicassoContainer-flex"
          >
            <p
              class="MuiTypography-root PicassoTypography-bodySmall PicassoTypography-darkGrey MuiTypography-body1"
            >
              <svg
                class="PicassoSvgBackMinor16-root PicassoMenu-backButtonIcon"
                style="min-width: 16px; min-height: 16px;"
                viewBox="0 0 16 16"
              >
                <path
                  d="M9.997 3.29l.707.707-4 4 4 4-.707.707L5.29 7.997l.707-.707 4-4z"
                />
              </svg>
              Back
            </p>
          </div>
        </div>
      </li>
      <li
        aria-disabled="false"
        class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root PicassoMenuListItem-root PicassoMenuListItem-light MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
        role="menuitem"
        tabindex="-1"
      >
        <div
          class="PicassoContainer-flex PicassoContainer-column PicassoMenuListItem-content"
        >
          <div
            class="PicassoContainer-centerAlignItems PicassoContainer-flex"
          >
            <span
              class="PicassoMenuListItem-stringContent"
            >
              Submenu Item
            </span>
          </div>
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Menu renders 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <ul
      class="MuiList-root PicassoMenuList-root"
      role="menu"
      tabindex="-1"
    >
      <li
        aria-disabled="false"
        class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root PicassoMenuListItem-root PicassoMenuListItem-light MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
        role="menuitem"
        tabindex="0"
      >
        <div
          class="PicassoContainer-flex PicassoContainer-column PicassoMenuListItem-content"
        >
          <div
            class="PicassoContainer-centerAlignItems PicassoContainer-flex"
          >
            <span
              class="PicassoMenuListItem-stringContent"
            >
              Item 1
            </span>
          </div>
        </div>
      </li>
      <li
        aria-disabled="false"
        class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root PicassoMenuListItem-root PicassoMenuListItem-light MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
        role="menuitem"
        tabindex="-1"
      >
        <div
          class="PicassoContainer-flex PicassoContainer-column PicassoMenuListItem-content"
        >
          <div
            class="PicassoContainer-centerAlignItems PicassoContainer-flex"
          >
            <span
              class="PicassoMenuListItem-stringContent"
            >
              Item 2
            </span>
          </div>
        </div>
      </li>
      <li
        aria-disabled="false"
        class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root PicassoMenuListItem-root PicassoMenuListItem-light MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
        role="menuitem"
        tabindex="-1"
      >
        <div
          class="PicassoContainer-flex PicassoContainer-column PicassoMenuListItem-content"
        >
          <div
            class="PicassoContainer-centerAlignItems PicassoContainer-flex"
          >
            <span
              class="PicassoMenuListItem-stringContent"
            >
              Item 3
            </span>
          </div>
        </div>
      </li>
    </ul>
  </div>
</div>
`;
